--- a/css/tropicana.css
+++ b/css/tropicana.css
@@ -3,7 +3,7 @@
 /* Default */
 body {
   padding-bottom: 40px;
-  color: #23A657;
+  color: #404040;
 }
 
 h1,h2,h3,h4,h5,h6, body {
@@ -26,8 +26,10 @@ strong {
 	font-size: 14px;
 }
 
-#map-container {
-	height: 300px;
+#map {
+	width: 500px;
+	height: 400px;
+
 }
 
 @media(min-width: 768px){
@@ -59,16 +61,22 @@ strong {
 
 	#slide1 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/sandiego2.jpg");
 	}
 
 	#slide2 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/diamond_bar.jpg");
 	}
 
 	#slide3 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/coronado.jpg");
 	}
 }
@@ -84,16 +92,22 @@ strong {
 	
 	#slide1 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/sandiego2.jpg");
 	}
 
 	#slide2 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/diamond_bar.jpg");
 	}
 
 	#slide3 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/coronado.jpg");
 	}
 }
@@ -111,16 +125,22 @@ strong {
 
 	#slide1 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/sandiego2.jpg");
 	}
 
 	#slide2 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/diamond_bar.jpg");
 	}
 
 	#slide3 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/coronado.jpg");
 	}
 }
@@ -132,16 +152,22 @@ strong {
 
 	#slide1 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/sandiego2.jpg");
 	}
 
 	#slide2 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/diamond_bar.jpg");
 	}
 
 	#slide3 {
 		min-height: 635px;
+		max-width: 100%;
+		height: auto;
 		background-image: url("../images/lg-images/coronado.jpg");
 	}
 
@@ -149,7 +175,7 @@ strong {
 	.span3 {
 		padding-top: 80px;
 		height: 100%;
-		width: 20%;
+		width: 15%;
 		background-color: #222;
 		padding-bottom: 140px;
 		padding-top: 150px;
@@ -158,7 +184,7 @@ strong {
 
 	.content-wrapper {
 		padding-top: 50px;
-		padding-left: 20%;
+		padding-left: 15%;
 		
 	}
 }
@@ -237,7 +263,7 @@ strong {
 }
 
 .marketing {
-	color: #398439;
+	color: #404040;
 }
 
 /*  Marketing CSS */
