--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6471,6 +6471,7 @@ button.close {
   color: #fff;
   text-align: center;
   text-shadow: 1px 1px 1px #000;
+  transform: translateY(-5%);
 }
 .carousel-caption .btn {
   text-shadow: none;
