--- a/css/tropicana.css
+++ b/css/tropicana.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6, body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Playfair Display",serif;
   font-weight: 300; 
 }
 
@@ -274,4 +274,12 @@ strong {
 .marketing .col-lg-4 p{
 	font-size: 16px;
 	line-height: 20px;
+}
+
+.top-buffer {
+	margin-top: 30px;
+}
+
+.left-buffer {
+	margin-left: 20px;
 }
