Updated link color, navbar links hover and click

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1097,12 +1097,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #279627;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: #195f19;
   text-decoration: underline;
 }
 a:focus {
