fine tuned grills.html added patio.html

--- a/css/tropicana.css
+++ b/css/tropicana.css
@@ -26,6 +26,7 @@ body.custom-background {
 	border-bottom-style: solid;
 	border-bottom-color: #999;
 	text-align: center;
+	color: #1b7e42;
 	padding-bottom: 3px;
 }
 
