--- a/css/tropicana.css
+++ b/css/tropicana.css
@@ -13,6 +13,18 @@ body.custom-background {
 	background-attachment: scroll;
 }
 
+.fancybox-title {
+    text-align: center;
+    font-size: 26px;
+    font-family: "Playfair Display",serif;
+    font-weight: 300;
+    color: #1b7e42;
+}
+
+.center {
+	text-align: center;
+}
+
 .margin-bottom {
 	padding-bottom: 25px;
 }
